# users

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  dependencies.py  main.py
app/api/: router.py
app/api/routes/: health.py  users.py
app/core/: __init__.py  config.py  exception_handlers.py  exceptions.py  logging.py
app/middleware/: request_logging.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: user.py
app/services/: __init__.py  user_service.py
tests/: test_users.py
